--- a/ts/tuto/src/index.css
+++ b/ts/tuto/src/index.css
@@ -6,6 +6,9 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: #2f74c0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 code {
